--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	"scripts": {
 		"start": "NODE_ENV=production node ./built/main.js",
 		"build": "tsc --p tsconfig.json",
-		"dev": "ts-node-dev ./src/main.ts"
+		"dev": "ts-node-dev ./src/main.ts",
+		"test": "jest"
 	},
 	"devDependencies": {
 		"@types/axios": "^0.14.0",
@@ -18,6 +19,8 @@
 		"@types/express": "^4.17.13",
 		"@types/jest": "^29.2.5",
 		"@types/node": "^17.0.23",
+		"jest": "^29.3.1",
+		"ts-jest": "^29.0.5",
 		"ts-node": "^10.7.0",
 		"ts-node-dev": "^1.1.8",
 		"tsc": "^2.0.4",
@@ -29,7 +32,6 @@
 		"chalk": "4.1.2",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
-		"express": "^4.17.3",
-		"jest": "^29.3.1"
+		"express": "^4.17.3"
 	}
 }
